--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^1.0.3",
+    "cors": "^2.8.4",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
+    "fb": "^2.0.0",
     "jsonwebtoken": "^8.2.1",
     "mongoose": "^5.0.13"
   },
